--- a/Assignment-Part-1/Task-1_regression.ipynb
+++ b/Assignment-Part-1/Task-1_regression.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[52416 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\m2404\\AppData\\Local\\Temp\\ipykernel_15876\\2873772670.py:2: FutureWarning: Dropping of nuisance columns in rolling operations is deprecated; in a future version this will raise TypeError. Select only valid columns before calling the operation. Dropped columns were Index(['DateTime'], dtype='object')\n",
+      "C:\\Users\\m2404\\AppData\\Local\\Temp\\ipykernel_19996\\2873772670.py:2: FutureWarning: Dropping of nuisance columns in rolling operations is deprecated; in a future version this will raise TypeError. Select only valid columns before calling the operation. Dropped columns were Index(['DateTime'], dtype='object')\n",
       "  data=data.rolling(window=144).mean()\n"
      ]
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,11 +240,11 @@
       "training data label shape: (41818,)\n",
       "test data feature space shape: (10455, 3)\n",
       "test data label shape: (10455,)\n",
-      "coefficient: [355.07522102   4.17868141  99.10375675]\n",
-      "intercept: 25188.313206230203\n",
-      "y pred:  [30018.85742465 32654.01622701 29796.81535673 ... 32427.65794351\n",
-      " 30376.90695859 33341.58330659]\n",
-      "Mean squared error: 3186284.12\n",
+      "coefficient: [355.67674957   4.81267241 102.5028367 ]\n",
+      "intercept: 25131.753286748968\n",
+      "y pred:  [32347.01638381 36961.06299094 34807.885252   ... 30228.00990069\n",
+      " 32634.05207228 35760.33118956]\n",
+      "Mean squared error: 3158573.13\n",
       "Coefficient of determination: 0.54\n"
      ]
     }
@@ -257,14 +257,19 @@
     "X = data[['Temperature', 'Humidity', 'Wind Speed']].values\n",
     "y = data['Power Consumption'].values\n",
     "X_train, X_test, y_train, y_test = ms.train_test_split(X, y, test_size=0.2)\n",
+    "\n",
     "print(\"training data feature shape:\", X_train.shape)\n",
     "print(\"training data label shape:\", y_train.shape)\n",
+    "\n",
     "print(\"test data feature space shape:\", X_test.shape)\n",
     "print(\"test data label shape:\", y_test.shape)\n",
+    "\n",
+    "\n",
     "ordinaryLRmodel = lm.LinearRegression()\n",
     "ordinaryLRmodel.fit(X_train, y_train)\n",
     "print(\"coefficient:\", ordinaryLRmodel.coef_)\n",
     "print(\"intercept:\", ordinaryLRmodel.intercept_)\n",
+    "\n",
     "y_pred = ordinaryLRmodel.predict(X_test)\n",
     "print(\"y pred: \",y_pred)\n",
     "print('Mean squared error: %.2f' %mean_squared_error(y_test, y_pred))\n",
