--- a/Assignment-Part-1/Task-2_classification.ipynb
+++ b/Assignment-Part-1/Task-2_classification.ipynb
@@ -20,17 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import neighbors\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +82,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>92</td>\n",
        "      <td>115</td>\n",
        "      <td>120</td>\n",
@@ -103,7 +106,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>84</td>\n",
        "      <td>102</td>\n",
        "      <td>106</td>\n",
@@ -127,7 +130,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>84</td>\n",
        "      <td>102</td>\n",
        "      <td>102</td>\n",
@@ -151,7 +154,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>80</td>\n",
        "      <td>102</td>\n",
        "      <td>102</td>\n",
@@ -175,7 +178,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>84</td>\n",
        "      <td>94</td>\n",
        "      <td>102</td>\n",
@@ -198,212 +201,44 @@
        "      <td>87</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5995</td>\n",
-       "      <td>51</td>\n",
-       "      <td>68</td>\n",
-       "      <td>85</td>\n",
-       "      <td>71</td>\n",
-       "      <td>51</td>\n",
-       "      <td>75</td>\n",
-       "      <td>93</td>\n",
-       "      <td>79</td>\n",
-       "      <td>55</td>\n",
-       "      <td>75</td>\n",
-       "      <td>...</td>\n",
-       "      <td>79</td>\n",
-       "      <td>56</td>\n",
-       "      <td>81</td>\n",
-       "      <td>97</td>\n",
-       "      <td>79</td>\n",
-       "      <td>52</td>\n",
-       "      <td>73</td>\n",
-       "      <td>93</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5996</td>\n",
-       "      <td>55</td>\n",
-       "      <td>75</td>\n",
-       "      <td>96</td>\n",
-       "      <td>79</td>\n",
-       "      <td>55</td>\n",
-       "      <td>72</td>\n",
-       "      <td>93</td>\n",
-       "      <td>71</td>\n",
-       "      <td>55</td>\n",
-       "      <td>72</td>\n",
-       "      <td>...</td>\n",
-       "      <td>79</td>\n",
-       "      <td>52</td>\n",
-       "      <td>66</td>\n",
-       "      <td>86</td>\n",
-       "      <td>72</td>\n",
-       "      <td>52</td>\n",
-       "      <td>66</td>\n",
-       "      <td>82</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5997</td>\n",
-       "      <td>55</td>\n",
-       "      <td>72</td>\n",
-       "      <td>93</td>\n",
-       "      <td>71</td>\n",
-       "      <td>55</td>\n",
-       "      <td>72</td>\n",
-       "      <td>85</td>\n",
-       "      <td>75</td>\n",
-       "      <td>59</td>\n",
-       "      <td>79</td>\n",
-       "      <td>...</td>\n",
-       "      <td>72</td>\n",
-       "      <td>52</td>\n",
-       "      <td>66</td>\n",
-       "      <td>82</td>\n",
-       "      <td>68</td>\n",
-       "      <td>56</td>\n",
-       "      <td>70</td>\n",
-       "      <td>82</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5998</td>\n",
-       "      <td>55</td>\n",
-       "      <td>72</td>\n",
-       "      <td>85</td>\n",
-       "      <td>75</td>\n",
-       "      <td>59</td>\n",
-       "      <td>79</td>\n",
-       "      <td>93</td>\n",
-       "      <td>75</td>\n",
-       "      <td>59</td>\n",
-       "      <td>91</td>\n",
-       "      <td>...</td>\n",
-       "      <td>68</td>\n",
-       "      <td>56</td>\n",
-       "      <td>70</td>\n",
-       "      <td>82</td>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>84</td>\n",
-       "      <td>97</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5999</td>\n",
-       "      <td>59</td>\n",
-       "      <td>79</td>\n",
-       "      <td>93</td>\n",
-       "      <td>75</td>\n",
-       "      <td>59</td>\n",
-       "      <td>91</td>\n",
-       "      <td>104</td>\n",
-       "      <td>83</td>\n",
-       "      <td>59</td>\n",
-       "      <td>87</td>\n",
-       "      <td>...</td>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>84</td>\n",
-       "      <td>97</td>\n",
-       "      <td>79</td>\n",
-       "      <td>59</td>\n",
-       "      <td>91</td>\n",
-       "      <td>101</td>\n",
-       "      <td>86</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6000 rows × 37 columns</p>\n",
+       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Feature 1  Feature 2  Feature 3  Feature 4  Feature 5  Feature 6  \\\n",
-       "0            92        115        120         94         84        102   \n",
-       "1            84        102        106         79         84        102   \n",
-       "2            84        102        102         83         80        102   \n",
-       "3            80        102        102         79         84         94   \n",
-       "4            84         94        102         79         80         94   \n",
-       "...         ...        ...        ...        ...        ...        ...   \n",
-       "5995         51         68         85         71         51         75   \n",
-       "5996         55         75         96         79         55         72   \n",
-       "5997         55         72         93         71         55         72   \n",
-       "5998         55         72         85         75         59         79   \n",
-       "5999         59         79         93         75         59         91   \n",
+       "   Feature 1  Feature 2  Feature 3  Feature 4  Feature 5  Feature 6  \\\n",
+       "0         92        115        120         94         84        102   \n",
+       "1         84        102        106         79         84        102   \n",
+       "2         84        102        102         83         80        102   \n",
+       "3         80        102        102         79         84         94   \n",
+       "4         84         94        102         79         80         94   \n",
        "\n",
-       "      Feature 7  Feature 8  Feature 9  Feature 10  ...  Feature 28  \\\n",
-       "0           106         79         84         102  ...         104   \n",
-       "1           102         83         80         102  ...         100   \n",
-       "2           102         79         84          94  ...          87   \n",
-       "3           102         79         80          94  ...          79   \n",
-       "4            98         76         80         102  ...          79   \n",
-       "...         ...        ...        ...         ...  ...         ...   \n",
-       "5995         93         79         55          75  ...          79   \n",
-       "5996         93         71         55          72  ...          79   \n",
-       "5997         85         75         59          79  ...          72   \n",
-       "5998         93         75         59          91  ...          68   \n",
-       "5999        104         83         59          87  ...          72   \n",
+       "   Feature 7  Feature 8  Feature 9  Feature 10  ...  Feature 28  Feature 29  \\\n",
+       "0        106         79         84         102  ...         104          88   \n",
+       "1        102         83         80         102  ...         100          84   \n",
+       "2        102         79         84          94  ...          87          84   \n",
+       "3        102         79         80          94  ...          79          84   \n",
+       "4         98         76         80         102  ...          79          84   \n",
        "\n",
-       "      Feature 29  Feature 30  Feature 31  Feature 32  Feature 33  Feature 34  \\\n",
-       "0             88         121         128         100          84         107   \n",
-       "1             84         107         113          87          84          99   \n",
-       "2             84          99         104          79          84          99   \n",
-       "3             84          99         104          79          84         103   \n",
-       "4             84         103         104          79          79         107   \n",
-       "...          ...         ...         ...         ...         ...         ...   \n",
-       "5995          56          81          97          79          52          73   \n",
-       "5996          52          66          86          72          52          66   \n",
-       "5997          52          66          82          68          56          70   \n",
-       "5998          56          70          82          72          56          84   \n",
-       "5999          56          84          97          79          59          91   \n",
+       "   Feature 30  Feature 31  Feature 32  Feature 33  Feature 34  Feature 35  \\\n",
+       "0         121         128         100          84         107         113   \n",
+       "1         107         113          87          84          99         104   \n",
+       "2          99         104          79          84          99         104   \n",
+       "3          99         104          79          84         103         104   \n",
+       "4         103         104          79          79         107         109   \n",
        "\n",
-       "      Feature 35  Feature 36  Label  \n",
-       "0            113          87      3  \n",
-       "1            104          79      3  \n",
-       "2            104          79      3  \n",
-       "3            104          79      3  \n",
-       "4            109          87      3  \n",
-       "...          ...         ...    ...  \n",
-       "5995          93          79      1  \n",
-       "5996          82          68      1  \n",
-       "5997          82          72      1  \n",
-       "5998          97          79      1  \n",
-       "5999         101          86      1  \n",
+       "   Feature 36  Label  \n",
+       "0          87      3  \n",
+       "1          79      3  \n",
+       "2          79      3  \n",
+       "3          79      3  \n",
+       "4          87      3  \n",
        "\n",
-       "[6000 rows x 37 columns]"
+       "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,6 +246,34 @@
    "source": [
     "data=pd.read_csv('data/landsat/landsat.csv')\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m X\u001b[38;5;241m=\u001b[39mdata\u001b[38;5;241m.\u001b[39mloc[:, data\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLabel\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m y\u001b[38;5;241m=\u001b[39mdata\u001b[38;5;241m.\u001b[39mLabel\n\u001b[1;32m----> 8\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_test_split\u001b[49m(X, y)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "## Pre-processing and sampling already done, doublechecked anyway(reuslts removed for brevity, no issues found)\n",
+    "## data.isnull().sum()\n",
+    "\n",
+    "##All columns are feature columns, hence:\n",
+    "X=data.loc[:, data.columns != 'Label']\n",
+    "y=data.Label\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
@@ -423,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
