--- a/4-Applications of Artificial Intelligence for Cyber Security/workshop-04-tasks.ipynb
+++ b/4-Applications of Artificial Intelligence for Cyber Security/workshop-04-tasks.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.83685684,  2.13635938],\n",
+       "       [ 1.27135141,  1.89254207],\n",
+       "       [ 3.43761754,  0.26165417],\n",
+       "       [ 1.45513831, -0.029199  ],\n",
+       "       [ 2.56936589,  0.5070483 ],\n",
+       "       [ 2.71506328,  1.2908219 ],\n",
+       "       [ 1.77710994,  1.18655254],\n",
+       "       [ 1.6974791 ,  0.86612328],\n",
+       "       [ 1.66382237,  0.66309163],\n",
+       "       [ 1.98894313,  1.50976729],\n",
+       "       [ 2.45509737,  0.62123179],\n",
+       "       [ 1.69687788,  0.75491062],\n",
+       "       [ 1.75644805,  2.05538289],\n",
+       "       [ 1.39263752,  0.92896271],\n",
+       "       [ 2.36960214,  0.95071691],\n",
+       "       [ 2.14043942,  0.70606661],\n",
+       "       [ 1.25471244,  0.08963316],\n",
+       "       [ 1.27955338,  1.05789418],\n",
+       "       [ 1.72955064,  1.14729369],\n",
+       "       [ 2.36923352,  0.79473586],\n",
+       "       [ 1.78194802,  0.90815116],\n",
+       "       [ 1.36155806,  1.36638252],\n",
+       "       [ 2.60137487,  1.08799459],\n",
+       "       [ 1.66909648, -0.43637823],\n",
+       "       [ 2.36790645,  0.55219088],\n",
+       "       [ 2.22707373,  1.26296996],\n",
+       "       [ 2.43934644, -0.07250997],\n",
+       "       [ 1.57322172,  0.48393379],\n",
+       "       [ 1.83375842,  0.75403615],\n",
+       "       [ 1.10550448,  1.26389129],\n",
+       "       [ 1.61152972,  1.82347242],\n",
+       "       [ 1.67841499,  0.60904739],\n",
+       "       [ 1.34195197,  0.59357385],\n",
+       "       [ 1.4281155 ,  1.62435083],\n",
+       "       [ 2.04505527,  1.1251547 ],\n",
+       "       [ 1.67280531,  0.65930057],\n",
+       "       [ 1.13078931,  0.93562086],\n",
+       "       [ 2.43040639, -0.06357093],\n",
+       "       [ 1.56724897,  0.01780906],\n",
+       "       [ 1.86873582,  0.95610376],\n",
+       "       [ 1.64003761,  1.81948989],\n",
+       "       [ 1.43472182,  1.30662037],\n",
+       "       [ 1.48170052,  0.69007459],\n",
+       "       [ 2.46915842,  1.6787714 ],\n",
+       "       [ 2.31102276,  1.30380848],\n",
+       "       [ 2.62492001,  0.9501944 ],\n",
+       "       [ 2.47019077,  1.31451315],\n",
+       "       [ 1.86985974, -0.10793862],\n",
+       "       [ 1.98436909,  0.48955674],\n",
+       "       [ 2.95195825, -0.34432736],\n",
+       "       [ 2.5270643 ,  0.6178122 ],\n",
+       "       [ 2.04067185,  0.45484511],\n",
+       "       [ 1.61990909,  0.06764529],\n",
+       "       [ 0.89349964,  1.01093082],\n",
+       "       [ 1.97553917,  0.71898913],\n",
+       "       [ 2.7680854 ,  1.08782923],\n",
+       "       [ 3.41085289,  0.87230937],\n",
+       "       [ 1.48859977,  0.65163384],\n",
+       "       [ 2.03169783,  0.19680756],\n",
+       "       [ 2.14917144,  1.03697228],\n",
+       "       [ 1.36678633,  0.63497163],\n",
+       "       [ 2.1139025 ,  1.24743587],\n",
+       "       [ 1.20083098,  0.60167173],\n",
+       "       [ 3.35320909,  1.69958043],\n",
+       "       [ 1.84287117,  0.07269288],\n",
+       "       [ 1.32000621,  1.40428145],\n",
+       "       [ 2.74666646,  1.54543482],\n",
+       "       [ 2.60778282,  1.08890025],\n",
+       "       [ 2.35151259,  0.8280013 ],\n",
+       "       [ 2.22322228,  0.83877343],\n",
+       "       [ 3.22881491,  1.13171965],\n",
+       "       [ 2.29469533, -0.76589199],\n",
+       "       [ 1.8155981 ,  1.11969719],\n",
+       "       [ 1.9736977 ,  1.57979848],\n",
+       "       [ 2.51834185,  1.39176615]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[y_pred == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
