--- a/Assignment-Part-1/Task-1_regression.ipynb
+++ b/Assignment-Part-1/Task-1_regression.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,42 +210,39 @@
       "Power Consumption    0\n",
       "dtype: int64\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m2404\\AppData\\Local\\Temp\\ipykernel_19996\\2873772670.py:2: FutureWarning: Dropping of nuisance columns in rolling operations is deprecated; in a future version this will raise TypeError. Select only valid columns before calling the operation. Dropped columns were Index(['DateTime'], dtype='object')\n",
-      "  data=data.rolling(window=144).mean()\n"
-     ]
     }
    ],
    "source": [
     "##Pre-processing\n",
+    "\n",
+    "## turning data into a rolling average of the last 24 hours\n",
     "data=data.rolling(window=144).mean()\n",
+    "# This leaves 144 entries blank(since they're not able to average 144 entries before them, so it's \n",
+    "# easier to remove those at the cost of some data)\n",
     "data=data.dropna()\n",
-    "print(data.isnull().sum())"
+    "print(data.isnull().sum())\n",
+    "# no null values, good"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training data feature shape: (41818, 3)\n",
-      "training data label shape: (41818,)\n",
-      "test data feature space shape: (10455, 3)\n",
-      "test data label shape: (10455,)\n",
-      "coefficient: [355.67674957   4.81267241 102.5028367 ]\n",
-      "intercept: 25131.753286748968\n",
-      "y pred:  [32347.01638381 36961.06299094 34807.885252   ... 30228.00990069\n",
-      " 32634.05207228 35760.33118956]\n",
-      "Mean squared error: 3158573.13\n",
-      "Coefficient of determination: 0.54\n"
+      "training data feature shape: (41589, 3)\n",
+      "training data label shape: (41589,)\n",
+      "test data feature space shape: (10398, 3)\n",
+      "test data label shape: (10398,)\n",
+      "coefficient: [ 3.57354361e+02 -2.55910013e-01  8.92756813e+01]\n",
+      "intercept: 25482.088157587037\n",
+      "y pred:  [30760.11180713 33439.27869828 32615.08435079 ... 30720.42486743\n",
+      " 34687.59129258 33022.35175096]\n",
+      "Mean squared error: 2895530.79\n",
+      "Coefficient of determination: 0.58\n"
      ]
     }
    ],
@@ -277,151 +274,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m2404\\AppData\\Local\\Temp\\ipykernel_15876\\1170780901.py:2: FutureWarning: Dropping of nuisance columns in rolling operations is deprecated; in a future version this will raise TypeError. Select only valid columns before calling the operation. Dropped columns were Index(['DateTime'], dtype='object')\n",
-      "  data.rolling(window=144).mean()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Power Consumption</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52411</th>\n",
-       "      <td>11.868819</td>\n",
-       "      <td>50.826250</td>\n",
-       "      <td>0.078042</td>\n",
-       "      <td>28154.964090</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52412</th>\n",
-       "      <td>11.824771</td>\n",
-       "      <td>50.957917</td>\n",
-       "      <td>0.078069</td>\n",
-       "      <td>28152.936206</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52413</th>\n",
-       "      <td>11.780674</td>\n",
-       "      <td>51.087014</td>\n",
-       "      <td>0.078139</td>\n",
-       "      <td>28147.782003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52414</th>\n",
-       "      <td>11.735451</td>\n",
-       "      <td>51.220278</td>\n",
-       "      <td>0.078160</td>\n",
-       "      <td>28147.021546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52415</th>\n",
-       "      <td>11.688993</td>\n",
-       "      <td>51.361667</td>\n",
-       "      <td>0.078174</td>\n",
-       "      <td>28145.669624</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>52416 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Temperature   Humidity  Wind Speed  Power Consumption\n",
-       "0              NaN        NaN         NaN                NaN\n",
-       "1              NaN        NaN         NaN                NaN\n",
-       "2              NaN        NaN         NaN                NaN\n",
-       "3              NaN        NaN         NaN                NaN\n",
-       "4              NaN        NaN         NaN                NaN\n",
-       "...            ...        ...         ...                ...\n",
-       "52411    11.868819  50.826250    0.078042       28154.964090\n",
-       "52412    11.824771  50.957917    0.078069       28152.936206\n",
-       "52413    11.780674  51.087014    0.078139       28147.782003\n",
-       "52414    11.735451  51.220278    0.078160       28147.021546\n",
-       "52415    11.688993  51.361667    0.078174       28145.669624\n",
-       "\n",
-       "[52416 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "This model is only slightly better than random chance, unfortunately, but I couldn't quite figure out how to create features for t-W to t-1 and utilise those instead. Rolling definitely improved the accuracy of prediction, however."
+   ]
   },
   {
    "cell_type": "code",
